@@ -24,9 +24,6 @@ SCALE DEFAULT 55 70   240 240 0
 SCALE DEFAULT 70 85   255 192 0  
 SCALE DEFAULT 85 100   255 0 0  
 
-SCALE errors 0 0   none  
-SCALE errors 0 100   255 0 0  
-
 SET nowarn_clipping 1
 
 # End of global section
@@ -50,8 +47,6 @@ LINK DEFAULT
 # regular NODEs:
 NODE node1
 	LABEL Node 1
-	INFOURL http://support.company.net/cacti/graph.php?rra_id=all&local_graph_id=4
-	OVERLIBGRAPH http://support.company.net/cacti/graph_image.php?local_graph_id=4&rra_id=0&graph_nolegend=true&graph_height=100&graph_width=300
 	POSITION 849 242
 
 NODE node2
@@ -71,14 +66,6 @@ LINK node1-node2
 LINK node2-node
 	NODES node2 node
 	BANDWIDTH 2M
-
-LINK node2-node-errors
-	TEMPLATE node2-node
-	WIDTH 7
-	ZORDER 290
-	TARGET static:0:0
-	NODES node2 node
-
 
 
 # That's All Folks!
