@@ -29,12 +29,14 @@
         ADDED - VIASTYLE angled (or curved) - you can turn sharp corners now
         ADDED - Comment (and pos) editing in editor (based on code by Zdolny)
         ADDED - Editor Settings dialog works, and allows you to set grid-snap and some overlays
+        ADDED - SCALE allows 'none' as a colour (for non-gradients). Only affects LINKs so far.
+        ADDED - fping plugin allows for changing the number of pings.
 	CHANGE - Cacti plugin uses "processed" map title now (allows {} tokens in the title)
 	CHANGE - A NODE with no POSITION is not drawn, instead of drawn at 0,0. Useful for templates.
 	CHANGE - A LINK with no NODES is no longer an error. Also for templates.
 	CHANGE - The link_bulge secret mode bulges each side of a link independently now
         CHANGE - whitespace is stripped from the beginning and end of each line before parsing
-	FIXED - Renaming a node in the editor correctly handles other relatively-positioned nodes
+	FIXED - Renaming a node in the editor correctly handles other relatively-positioned nodes and vias
 	FIXED - Minor issue with CRLF in map title for Cacti Plugin
 	FIXED - CLI tool set --define options incorrectly.
 	FIXED - Oneway links don't draw the INCOMMENT anymore
